--- a/env_conda.yaml
+++ b/env_conda.yaml
@@ -14,6 +14,7 @@ dependencies:
     - matplotlib==3.9.0
     - numpy==1.26.4
     - pandas==2.2.2
+    - scikit-learn==1.5.1
     - datasets==2.20.0
     - fastapi==0.114.2
     - chromadb==0.5.3
@@ -26,4 +27,5 @@ dependencies:
     - ragas==0.1.9
     - uvicorn==0.30.1
     - pypdf==4.2.0
+    - langfuse==2.50.2
 
